@@ -1,3 +1,10 @@
+Thu May  4 16:26:34 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* The testsuite driver now supports running a single test by name.
+
+	* apitest and internaltest now support an extra argument which
+	  specifies the name of a single test to run.
+
 Tue May  2 18:56:20 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
 
 	* get_mset() now actually asynchronous.
